src/tests/errors/ivdserial/badspec.ivdserial
The IVD compiler has encountered the following error:
Syntax error on line 15:
#{};
^
Expected Spec declaration.

---------------------------------------------------
